# BigData-Progetto1

./: .gitattributes  .gitignore  CLAUDE.md  PLAN.md  README.md  docker-compose.yml
Contesto/: CLAUDE.md  PLAN.md
backend/: package.json
backend/src/: server.js
config/: experiment.json  warehouse_graph.json
config/presets/: warehouse_large.json  warehouse_small.json
dashboard/: app.js  index.html  style.css
docs/passi/: 01-scaffold-infrastruttura.md  02-contratti-dati.md  03-bringup-ros-gazebo.md  10-layer-tag.md  (+12 more)
eval/: common.py  eval_service.py  reference_questions.py  run_effectiveness.py  run_efficiency.py
generator/: generator_service.py  synthetic_generator.py
offline/: adaptive_thresholds.py
predictive/: forecast_failures.py
ros/: Dockerfile  entrypoint.sh  supervisord.conf
ros/catkin_ws/src/shf_bringup/: CMakeLists.txt  package.xml
ros/catkin_ws/src/shf_bringup/config/: global_costmap_no_map.yaml
ros/catkin_ws/src/shf_bringup/launch/: move_base_no_map.launch  sim_multi_robot.launch  sim_single_robot.launch
ros/catkin_ws/src/shf_bringup/scripts/: fleet_control_service.py  gen_robot_description.sh  graph_navigator.py  kafka_bridge.py
ros/catkin_ws/src/shf_bringup/worlds/: warehouse.world
spark/: Dockerfile
streaming/: detection_job.py  isolation_forest_model.py  persistence_job.py  query_service.py  schemas.py  start-master.sh  train_isolation_forest.py
test/: README.md  conftest.py  test_detection_effectiveness.py  test_efficiency.py  test_fault_ground_truth.py  test_prediction_accuracy.py  test_schema.py  test_tag_accuracy.py
(+22 files in other folders)
